--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+	/*vertical-align: baseline;*/
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -185,4 +185,73 @@ footer
 {
   position: relative;
   top: 55px;
+}
+
+.related-content
+{
+	position: relative;
+  left: 20px;
+  height: 90px;
+	border-bottom:  1px solid #cecece;
+	box-shadow: -3px 3px 3px 0px #F3F3F3;
+}
+
+.related-content-article-link, .related-content-paid-aricle
+{
+  box-sizing: border-box;
+  padding: 10px;
+  width: 240px;
+  height: 85px;
+  font-size: 16px;
+  display: inline-block;
+  border-right: 1px solid rgb(204, 204, 204);
+  color: #333;
+  font-family: georgia,"times new roman",times,serif;
+	vertical-align: top;
+}
+
+.related-content-article-link:hover, .related-content-paid-aricle:hover
+{
+  text-decoration: underline;
+  cursor: pointer;
+}
+.related-content-article-link a, .related-content-paid-aricle a
+{
+  text-decoration: none;
+  color: #333;
+}
+
+.related-content-article-desc
+{
+  color: black;
+  font-weight: lighter;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.related-content-paid-aricle .related-content-article-desc
+{
+  color: rgb(81, 175, 247);
+}
+
+.related-content-article-link img
+{
+  float: left;
+  margin-right: 5px;
+}
+
+ .related-content-paid-aricle img
+ {
+   float: right;
+   margin-left: 5px;
+ }
+
+.related-content-article-link:last-of-type
+{
+  width: 80px;
+}
+
+.related-content-article-link p, .related-content-paid-aricle p
+{
+	vertical-align: top;
 }
